# testworker

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json
.claude/hooks/: guard-bash.mjs  guard-write.mjs  post-edit-format.mjs  scan-commit.mjs  stop-quality-check.mjs
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bolt.md  bug.md  config.yml  feature.md  intent.md  task.md
.github/workflows/: auto-merge.yml  auto-resolve.yml  ci.yml  secret-scan.yml
docker/: api.Dockerfile  runner.Dockerfile  web.Dockerfile
docs/: troubleshooting.md
docs/images/: README.md
docs/presets/: next.yaml  sveltekit.yaml
scripts/: README.md  auto-resolve-one.sh  orchestrate.example.yaml  orchestrate.py  pyproject.toml  setup-branch-protection.sh
scripts/tests/: test_auto_resolve_one.py  test_orchestrate.py
