[project]
name = "testworker-orchestrator"
version = "0.1.0"
description = "Parallel agent orchestration for testworker (issue #30)"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10", "types-PyYAML>=6.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF", "SIM", "PT", "ANN"]
ignore = ["ANN401", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PLR2004", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
